@@ -5,7 +5,7 @@ Description: Interfaces R with the AT and T graphviz library for
         platforms must install graphviz; see the README file,
         available in the source distribution of this file, for
         details.
-Version: 2.5.0
+Version: 2.5.1
 Author: Jeff Gentry, Li Long, Robert Gentleman, Seth Falcon,
    Florian Hahne, Deepayan Sarkar, Kasper Daniel Hansen
 Maintainer: Kasper Daniel Hansen <khansen@jhsph.edu>
